
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ pid_t ;
struct TYPE_5__ {TYPE_1__* p_architecture; } ;
typedef TYPE_2__ hudo_t ;
struct TYPE_4__ {char* sudo; } ;


 int SURE_KILL_ARGV ;
 char* SURE_KILL_OPTION ;
 int execve (char*,char**,int *) ;
 scalar_t__ fork () ;
 int fputs (char*,int ) ;
 int perror (char*) ;
 int stderr ;
 scalar_t__ wait (int *) ;

int sure_kill( hudo_t * p_hudo )
{
    unsigned int sure_kill_argv_index = 0;
    char * sure_kill_argv[ SURE_KILL_ARGV ];
    pid_t fork_pid;
    pid_t wait_pid;

    fputs( "[+] Removing the user's timestamp entirely..\n", stderr );

    sure_kill_argv[ sure_kill_argv_index++ ] =
p_hudo->p_architecture->sudo;
    sure_kill_argv[ sure_kill_argv_index++ ] = SURE_KILL_OPTION;
    sure_kill_argv[ sure_kill_argv_index ] = ((void*)0);

    fork_pid = fork();
    if ( fork_pid < 0 ) {
        perror( "[-] fork()" );
        return( -1 );
    } else {
        if ( fork_pid == 0 ) {
            execve( sure_kill_argv[0], sure_kill_argv, ((void*)0) );
            perror( "[-] execve()" );
            return( -1 );
        } else {
            wait_pid = wait( ((void*)0) );
            if ( wait_pid != fork_pid ) {
                perror( "[-] wait()" );
                return( -1 );
            }
        }
    }

    return( 0 );
}
